feat: upgrade wagmi to v1 and replace ethers with viem (#262)
* feat: upgrade wagmi to v1 and replace ethers with viem

* fix(frontend): be more specific in specifying fathom's out dir

* chore(sdk,react): update rollup config

* chore(frontend): update browserlite to support bigints

* chore(frontend): update how envs are set and checked

* chore: update dependencies

* chore(react,sdk): inline dynamic imports when building

* chore: upgrade use-fathom-client library

* chore(frontend): move get env utility function in utils folder

* chore(frontend): improve wagmi imports

* chore(frontend): add comment

* chore(frontend): dedupe import

* chore(frontend): dedupe import

* chore(sdk): import type

* chore(sdk): add todo

* chore(sdk): add type modifier to import

* chore(sdk): add type modifier to import

* fix(frontend): never install service worker when the app is running in dev mode

* fix(frontend): fix wrong type import

* chore(frontend): update browserslist to support bigints in final build

* fix(frontend): fix import of cjs get env util in rollup esm config

---------

Co-authored-by: Federico Luzzi <fedeluzzi00@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,10 +7,8 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 env:
-  REACT_APP_INFURA_PROJECT_ID: ${{ secrets.REACT_APP_INFURA_PROJECT_ID }}
-  REACT_APP_WALLETCONNECT_PROJECT_ID:
-    ${{ secrets.REACT_APP_WALLETCONNECT_PROJECT_ID }}
-  REACT_APP_FATHOM_SITE_ID: ${{ secrets.FATHOM_SITE_ID }}
+  INFURA_PROJECT_ID: ${{ secrets.INFURA_PROJECT_ID }}
+  WALLETCONNECT_PROJECT_ID: ${{ secrets.WALLETCONNECT_PROJECT_ID }}
   FATHOM_SITE_ID: ${{ secrets.FATHOM_SITE_ID }}
   FATHOM_API_KEY: ${{ secrets.FATHOM_API_KEY }}
 jobs:
