--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -45,6 +45,7 @@
         "eth-provider": "^0.13.6",
         "ethereum-blockies-base64": "^1.0.2",
         "ethereum-provider": "^0.7.7",
+        "react-redux": "8.0.7",
         "react-router-dom": "^6.12.1",
         "sanitize-html": "^2.9.0",
         "use-fathom-client": "^1.3.2",
