--- a/packages/shared-state/package.json
+++ b/packages/shared-state/package.json
@@ -25,7 +25,7 @@
     "dependencies": {
         "@reduxjs/toolkit": "^1.9.5",
         "lodash.debounce": "^4.0.8",
-        "react-redux": "^8.1.0"
+        "react-redux": "8.0.7"
     },
     "peerDependencies": {
         "react": "^18.2.0"
