--- a/packages/frontend/.fathomrc
+++ b/packages/frontend/.fathomrc
@@ -5,6 +5,7 @@
         "TX_KPI_TOKEN_CREATION",
         "TX_KPI_TOKEN_REDEMPTION",
         "TX_ORACLE_FINALIZATION",
-        "TX_CUSTOM"
+        "TX_CUSTOM",
+        "TX_KPI_TOKEN_COLLATERAL_RECOVER"
     ]
 }
