--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -45,6 +45,7 @@
         "eth-provider": "^0.13.6",
         "ethereum-blockies-base64": "^1.0.2",
         "ethereum-provider": "^0.7.7",
+        "jwt-decode": "^3.1.2",
         "react-redux": "8.1.1",
         "react-router-dom": "^6.14.0",
         "sanitize-html": "^2.11.0",
