chore: upgrade patched dependencies

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -47,7 +47,7 @@
         "ethereum-provider": "^0.7.7",
         "jwt-decode": "^3.1.2",
         "react-redux": "8.1.1",
-        "react-router-dom": "^6.14.0",
+        "react-router-dom": "^6.14.2",
         "sanitize-html": "^2.11.0",
         "use-fathom-client": "^1.3.2",
         "viem": "^1.1.7"
@@ -65,16 +65,18 @@
     "devDependencies": {
         "@carrot-kpi/shared-state": "*",
         "@carrot-kpi/switzer-font": "^0.1.0",
+        "@commitlint/cli": "^17.6.7",
+        "@commitlint/config-conventional": "^17.6.7",
         "@craco/craco": "^7.1.0",
         "@fontsource/ibm-plex-mono": "^5.0.3",
         "@react-spring/web": "^9.7.3",
-        "@rollup/plugin-commonjs": "^25.0.2",
+        "@rollup/plugin-commonjs": "^25.0.3",
         "@rollup/plugin-json": "^6.0.0",
         "@rollup/plugin-node-resolve": "^15.1.0",
         "@rollup/plugin-replace": "^5.0.2",
         "@size-limit/file": "^8.2.6",
         "@tanstack/react-query": "^4.29.17",
-        "@types/react": "^18.2.14",
+        "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.6",
         "@types/react-router-dom": "^5.3.3",
         "@types/rollup-plugin-peer-deps-external": "^2.2.1",
@@ -85,22 +87,23 @@
         "dotenv": "^16.3.1",
         "eslint-config-custom": "*",
         "i18next": "^23.2.3",
-        "postcss": "^8.4.24",
+        "postcss": "^8.4.27",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-i18next": "^13.0.1",
         "react-scripts": "^5.0.1",
         "react-use": "^17.4.0",
         "rimraf": "^5.0.0",
-        "rollup": "^3.25.2",
+        "rollup": "^3.26.3",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "rollup-plugin-postcss": "^4.0.2",
         "rollup-plugin-typescript2": "^0.35.0",
         "size-limit": "^8.2.6",
-        "tailwindcss": "^3.3.2",
+        "tailwindcss": "^3.3.3",
         "tsconfig": "*",
+        "turbo": "^1.10.9",
         "typescript": "^5.1.3",
-        "wagmi": "^1.3.0",
+        "wagmi": "^1.3.9",
         "workbox-precaching": "^7.0.0",
         "workbox-routing": "^7.0.0"
     },
