--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -50,8 +50,8 @@
         "react-use": "^17.4.0",
         "react-virtualized-auto-sizer": "^1.0.20",
         "react-window": "^1.8.9",
-        "tailwind-merge": "^1.13.2",
-        "viem": "^1.1.7"
+        "tailwind-merge": "^1.14.0",
+        "viem": "^1.4.1"
     },
     "peerDependencies": {
         "@carrot-kpi/switzer-font": "^0.1.0",
@@ -67,14 +67,16 @@
         "@rollup/plugin-commonjs": "^25.0.3",
         "@rollup/plugin-node-resolve": "^15.1.0",
         "@size-limit/preset-small-lib": "^8.2.6",
-        "@storybook/addon-actions": "^7.0.23",
-        "@storybook/addon-essentials": "^7.0.23",
-        "@storybook/addon-interactions": "^7.0.23",
-        "@storybook/addon-links": "^7.0.23",
-        "@storybook/react": "^7.0.23",
-        "@storybook/react-webpack5": "^7.0.23",
+        "@storybook/addon-actions": "^7.1.0",
+        "@storybook/addon-essentials": "^7.1.0",
+        "@storybook/addon-interactions": "^7.1.0",
+        "@storybook/addon-links": "^7.1.0",
+        "@storybook/addon-styling": "^1.3.4",
+        "@storybook/manager-api": "^7.1.0",
+        "@storybook/react": "^7.1.0",
+        "@storybook/react-webpack5": "^7.1.0",
         "@storybook/testing-library": "^0.2.0",
-        "@storybook/theming": "^7.0.23",
+        "@storybook/theming": "^7.1.0",
         "@tailwindcss/typography": "^0.5.8",
         "@types/react": "^18.2.15",
         "@types/react-window": "^1.8.5",
@@ -92,8 +94,7 @@
         "rollup-plugin-postcss": "^4.0.2",
         "rollup-plugin-typescript2": "^0.35.0",
         "size-limit": "^8.2.6",
-        "storybook": "^7.0.23",
-        "storybook-dark-mode": "^3.0.0",
+        "storybook": "^7.1.0",
         "tailwindcss": "^3.3.3",
         "tsconfig": "*",
         "typescript": "^5.1.3"
