--- a/.github/workflows/changeset-check.yaml
+++ b/.github/workflows/changeset-check.yaml
@@ -16,5 +16,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "yarn"
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
       - name: Check
         run: yarn changeset:check
