--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -5,7 +5,7 @@
     "fixed": [],
     "linked": [],
     "access": "restricted",
-    "baseBranch": "main",
+    "baseBranch": "origin/main",
     "updateInternalDependencies": "patch",
     "___experimentalUnsafeOptions_WILL_CHANGE_IN_PATCH": {
         "onlyUpdatePeerDependentsWhenOutOfRange": true
