fix: add caching to changeset job and remove publish step (#309)
* fix: add caching to changeset job and remove publish step

* feat: add changeset check gh action

* fix: install deps on changeset check gh action

* chore: update base branch in changeset config

* chore: remove since setting in changeset status command

* choreL remove changeset check gh action

---------

Co-authored-by: Federico Luzzi <fedeluzzi00@gmail.com>

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     ],
     "scripts": {
         "changeset:publish": "yarn run build && changeset publish",
+        "changeset:check": "changeset status",
         "build": "turbo run build",
         "build:frontend-production": "turbo run build:production --filter @carrot-kpi/host-frontend",
         "build:frontend-staging": "turbo run build:staging --filter @carrot-kpi/host-frontend",
