chore(frontend): when build command is invoked, build library

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,7 +25,7 @@
         "lint": "eslint --ext .tsx,.ts ./src && prettier --check './**/*.{json,md}'",
         "format": "eslint --fix --ext .tsx,.ts,.js ./ && prettier --write './**/*.{json,md}'",
         "clean": "rimraf ./build && rimraf ./dist",
-        "build": "yarn build:production",
+        "build": "yarn build:library",
         "build:production": "yarn clean && yarn prepare-fathom && GENERATE_SOURCEMAP=false craco build",
         "build:staging": "yarn clean && yarn prepare-fathom && GENERATE_SOURCEMAP=false STAGING=true craco build",
         "build:library": "yarn clean && yarn prepare-fathom && rollup -c rollup.config.mjs",
