chore(sdk): move tests in dedicated folder

--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "extends": "tsconfig/sdk.json",
-    "include": ["./src/**/*"],
+    "include": ["./src/**/*", "./tests/**/*"],
     "compilerOptions": {
         "outDir": "./dist",
         "rootDir": "./src"
