--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -85,6 +85,7 @@
         "buffer": "^6.0.3",
         "cross-env": "^7.0.3",
         "dotenv": "^16.3.1",
+        "esbuild-loader": "^4.0.0",
         "eslint-config-custom": "*",
         "eslint-plugin-prettier": "^5.0.0",
         "i18next": "^23.2.3",
