--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -84,7 +84,9 @@
         "autoprefixer": "^10.4.14",
         "buffer": "^6.0.3",
         "cross-env": "^7.0.3",
+        "cssnano": "^6.0.1",
         "dotenv": "^16.3.1",
+        "esbuild-loader": "^4.0.0",
         "eslint-config-custom": "*",
         "eslint-plugin-prettier": "^5.0.0",
         "i18next": "^23.2.3",
