--- a/packages/sdk/tsconfig.build.json
+++ b/packages/sdk/tsconfig.build.json
@@ -5,6 +5,7 @@
     "compilerOptions": {
         "outDir": "./dist",
         "declaration": true,
+        "declarationDir": "./dist/types",
         "rootDir": "./src"
     }
 }
