fix(sdk): use size limit file plugin

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -129,7 +129,7 @@
         "@jest/globals": "^29.5.0",
         "@rollup/plugin-commonjs": "^25.0.3",
         "@rollup/plugin-node-resolve": "^15.1.0",
-        "@size-limit/preset-small-lib": "^8.2.6",
+        "@size-limit/file": "^8.2.6",
         "@types/jest": "^29.5.2",
         "@types/rollup-plugin-peer-deps-external": "^2.2.1",
         "babel-jest": "^29.5.0",
