--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,8 +23,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "yarn"
-      - name: Install changeset
-        run: yarn global add @changesets/cli
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
       - name: Create release pull request
         uses: changesets/action@v1
         with:
