feat: replace rollup ts plugin with esbuild and add specific file extensions to sdk

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -3,6 +3,8 @@
     "include": ["./src/**/*"],
     "exclude": ["./src/analytics/generated.ts"],
     "compilerOptions": {
+        "declaration": true,
+        "emitDeclarationOnly": true,
         "outDir": "./dist",
         "rootDir": "./src"
     }
