--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -296,7 +296,7 @@
     "scripts": {
         "lint": "eslint --ext .tsx,.ts ./src && prettier --check './**/*.{json,md}'",
         "format": "eslint --fix --ext .tsx,.ts,.js ./ && prettier --write './**/*.{json,md}'",
-        "build": "yarn clean && rollup -c rollup.config.mjs",
+        "build": "yarn clean && rollup -c rollup.config.mjs && tsc",
         "clean": "rimraf ./dist",
         "test": "echo 'No tests' && exit 0",
         "size-limit": "size-limit"
@@ -336,8 +336,8 @@
         "react-router-dom": "^6.14.2",
         "rimraf": "^5.0.0",
         "rollup": "^3.26.3",
+        "rollup-plugin-esbuild": "^5.0.0",
         "rollup-plugin-peer-deps-external": "^2.2.4",
-        "rollup-plugin-typescript2": "^0.35.0",
         "size-limit": "^8.2.6",
         "tsconfig": "*",
         "typescript": "^5.1.3",
