--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -5,66 +5,66 @@
     "author": "Federico Luzzi <fedeluzzi00@gmail.com>",
     "version": "1.33.0",
     "description": "An SDK for building applications on top of Carrot v1.",
-    "main": "./dist/cjs/index.js",
-    "module": "./dist/es/index.js",
+    "main": "./dist/cjs/index.cjs",
+    "module": "./dist/es/index.mjs",
     "types": "./dist/types/index.d.ts",
     "typings": "./dist/types/index.d.ts",
     "sideEffects": false,
     "exports": {
         ".": {
             "types": "./dist/types/index.d.ts",
-            "import": "./dist/es/index.js",
-            "default": "./dist/cjs/index.js"
+            "import": "./dist/es/index.mjs",
+            "default": "./dist/cjs/index.cjs"
         },
         "./commons": {
             "types": "./dist/types/commons.d.ts",
-            "import": "./dist/es/commons.js",
-            "default": "./dist/cjs/commons.js"
+            "import": "./dist/es/commons.mjs",
+            "default": "./dist/cjs/commons.cjs"
         },
         "./cacher": {
             "types": "./dist/types/cacher.d.ts",
-            "import": "./dist/es/cacher.js",
-            "default": "./dist/cjs/cacher.js"
+            "import": "./dist/es/cacher.mjs",
+            "default": "./dist/cjs/cacher.cjs"
         },
         "./fetcher": {
             "types": "./dist/types/fetcher/index.d.ts",
-            "import": "./dist/es/fetcher/index.js",
-            "default": "./dist/cjs/fetcher/index.js"
+            "import": "./dist/es/fetcher/index.mjs",
+            "default": "./dist/cjs/fetcher/index.cjs"
         },
         "./utils": {
             "types": "./dist/types/utils/index.d.ts",
-            "import": "./dist/es/utils/index.js",
-            "default": "./dist/cjs/utils/index.js"
+            "import": "./dist/es/utils/index.mjs",
+            "default": "./dist/cjs/utils/index.cjs"
         },
         "./entities/amount": {
             "types": "./dist/types/entities/amount.d.ts",
-            "import": "./dist/es/entities/amount.js",
-            "default": "./dist/cjs/entities/amount.js"
+            "import": "./dist/es/entities/amount.mjs",
+            "default": "./dist/cjs/entities/amount.cjs"
         },
         "./entities/currency": {
             "types": "./dist/types/entities/currency.d.ts",
-            "import": "./dist/es/entities/currency.js",
-            "default": "./dist/cjs/entities/currency.js"
+            "import": "./dist/es/entities/currency.mjs",
+            "default": "./dist/cjs/entities/currency.cjs"
         },
         "./entities/kpi-token": {
             "types": "./dist/types/entities/kpi-token.d.ts",
-            "import": "./dist/es/entities/kpi-token.js",
-            "default": "./dist/cjs/entities/kpi-token.js"
+            "import": "./dist/es/entities/kpi-token.mjs",
+            "default": "./dist/cjs/entities/kpi-token.cjs"
         },
         "./entities/oracle": {
             "types": "./dist/types/entities/oracle.d.ts",
-            "import": "./dist/es/entities/oracle.js",
-            "default": "./dist/cjs/entities/oracle.js"
+            "import": "./dist/es/entities/oracle.mjs",
+            "default": "./dist/cjs/entities/oracle.cjs"
         },
         "./entities/template": {
             "types": "./dist/types/entities/template.d.ts",
-            "import": "./dist/es/entities/template.js",
-            "default": "./dist/cjs/entities/template.js"
+            "import": "./dist/es/entities/template.mjs",
+            "default": "./dist/cjs/entities/template.cjs"
         },
         "./entities/token": {
             "types": "./dist/types/entities/token.d.ts",
-            "import": "./dist/es/entities/token.js",
-            "default": "./dist/cjs/entities/token.js"
+            "import": "./dist/es/entities/token.mjs",
+            "default": "./dist/cjs/entities/token.cjs"
         }
     },
     "typesVersions": {
@@ -108,7 +108,7 @@
     "scripts": {
         "lint": "eslint --ext .tsx,.ts ./src && prettier --check './**/*.{json,md}'",
         "format": "eslint --fix --ext .tsx,.ts,.js ./ && prettier --write './**/*.{json,md}'",
-        "build": "yarn clean && rollup -c rollup.config.mjs",
+        "build": "yarn clean && rollup -c rollup.config.mjs && tsc --project tsconfig.build.json",
         "clean": "rimraf ./dist",
         "test": "jest",
         "size-limit": "size-limit"
@@ -140,8 +140,8 @@
         "prettier": "^3.0.0",
         "rimraf": "^5.0.0",
         "rollup": "^3.26.3",
+        "rollup-plugin-esbuild": "^5.0.0",
         "rollup-plugin-peer-deps-external": "^2.2.4",
-        "rollup-plugin-typescript2": "^0.35.0",
         "size-limit": "^8.2.6",
         "ts-jest": "^29.1.0",
         "tsconfig": "*",
