--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -234,7 +234,7 @@
     "scripts": {
         "lint": "eslint --ext .tsx,.ts ./src && prettier --check './**/*.{json,md}'",
         "format": "eslint --fix --ext .tsx,.ts,.js ./ && prettier --write './**/*.{json,md}'",
-        "build": "yarn clean && rollup -c rollup.config.mjs",
+        "build": "yarn clean && rollup -c rollup.config.mjs && tsc --project ./tsconfig.build.json",
         "clean": "rimraf ./dist",
         "test": "echo 'No tests' && exit 0",
         "size-limit": "size-limit",
@@ -302,9 +302,9 @@
         "react-dom": "^18.2.0",
         "rimraf": "^5.0.0",
         "rollup": "^3.26.3",
+        "rollup-plugin-esbuild": "^5.0.0",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "rollup-plugin-postcss": "^4.0.2",
-        "rollup-plugin-typescript2": "^0.35.0",
         "size-limit": "^8.2.6",
         "storybook": "^7.1.0",
         "tailwindcss": "^3.3.3",
