chore: improve size-limit configs across the board

--- a/packages/shared-state/package.json
+++ b/packages/shared-state/package.json
@@ -33,7 +33,7 @@
     "devDependencies": {
         "@rollup/plugin-commonjs": "^25.0.3",
         "@rollup/plugin-node-resolve": "^15.1.0",
-        "@size-limit/preset-small-lib": "^8.2.6",
+        "@size-limit/file": "^8.2.6",
         "@types/lodash.debounce": "^4.0.7",
         "@types/react": "^18.2.15",
         "@types/rollup-plugin-peer-deps-external": "^2.2.1",
