--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -322,7 +322,7 @@
         "@carrot-kpi/shared-state": "*",
         "@rollup/plugin-commonjs": "^25.0.3",
         "@rollup/plugin-node-resolve": "^15.1.0",
-        "@size-limit/preset-small-lib": "^8.2.6",
+        "@size-limit/file": "^8.2.6",
         "@tanstack/react-query": "^4.32.0",
         "@types/react": "^18.2.15",
         "@types/rollup-plugin-peer-deps-external": "^2.2.1",
