--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -275,7 +275,7 @@
         "@carrot-kpi/switzer-font": "^0.1.0",
         "@rollup/plugin-commonjs": "^25.0.3",
         "@rollup/plugin-node-resolve": "^15.1.0",
-        "@size-limit/preset-small-lib": "^8.2.6",
+        "@size-limit/file": "^8.2.6",
         "@storybook/addon-actions": "^7.1.0",
         "@storybook/addon-essentials": "^7.1.0",
         "@storybook/addon-interactions": "^7.1.0",
