--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -296,7 +296,7 @@
     "scripts": {
         "lint": "eslint --ext .tsx,.ts ./src && prettier --check './**/*.{json,md}'",
         "format": "eslint --fix --ext .tsx,.ts,.js ./ && prettier --write './**/*.{json,md}'",
-        "build": "yarn clean && rollup -c rollup.config.mjs",
+        "build": "yarn clean && rollup -c rollup.config.mjs && tsc",
         "clean": "rimraf ./dist",
         "test": "echo 'No tests' && exit 0",
         "size-limit": "size-limit"
@@ -322,7 +322,7 @@
         "@carrot-kpi/shared-state": "*",
         "@rollup/plugin-commonjs": "^25.0.3",
         "@rollup/plugin-node-resolve": "^15.1.0",
-        "@size-limit/preset-small-lib": "^8.2.6",
+        "@size-limit/file": "^8.2.6",
         "@tanstack/react-query": "^4.32.0",
         "@types/react": "^18.2.15",
         "@types/rollup-plugin-peer-deps-external": "^2.2.1",
@@ -336,8 +336,8 @@
         "react-router-dom": "^6.14.2",
         "rimraf": "^5.0.0",
         "rollup": "^3.26.3",
+        "rollup-plugin-esbuild": "^5.0.0",
         "rollup-plugin-peer-deps-external": "^2.2.4",
-        "rollup-plugin-typescript2": "^0.35.0",
         "size-limit": "^8.2.6",
         "tsconfig": "*",
         "typescript": "^5.1.3",
